# zephyr-mcumgr-client

./: .coderabbit.yml  CHANGELOG.md  Cargo.toml  README.md  TODO.txt
.github/workflows/: audit.yml  ci.yml  codecov.yml  python-docs.yml  python.yml
zephyr-mcumgr/: Cargo.toml
zephyr-mcumgr-cli/: Cargo.toml  README.md
zephyr-mcumgr-cli/src/: args.rs  errors.rs  file_read_write.rs  formatting.rs  main.rs  progress.rs  raw_command.rs
zephyr-mcumgr-cli/src/groups/: firmware.rs  fs.rs  image.rs  mcuboot.rs  mod.rs  os.rs  raw.rs  shell.rs  zephyr.rs
zephyr-mcumgr-python/: .gitignore  Cargo.toml  README.md  pyproject.toml  zephyr_mcumgr.pyi
zephyr-mcumgr-python/src/: lib.rs  locked_client.rs  mcuboot.rs  raw_py_any_command.rs  repr_macro.rs  return_types.rs  sha256_type.rs
zephyr-mcumgr/src/: bootloader.rs  client.rs  connection.rs  errno.rs  lib.rs  smp_errors.rs
zephyr-mcumgr/src/client/: firmware_update.rs
zephyr-mcumgr/src/commands/: fs.rs  image.rs  macros.rs  mod.rs  os.rs  shell.rs  zephyr.rs
zephyr-mcumgr/src/firmware_update/: mod.rs
zephyr-mcumgr/src/mcuboot/: mod.rs
zephyr-mcumgr/src/mcuboot/image/: mod.rs
zephyr-mcumgr/src/transport/: mod.rs  serial.rs
zephyr-mcumgr/tests/: integration_tests.rs  transport_serial_tests.rs
zephyr-mcumgr/tests/common/: mod.rs
