[workspace]
resolver = "3"
members = ["zephyr-mcumgr", "zephyr-mcumgr-cli"]

[workspace.package]
version = "0.0.1"
authors = ["Finomnis <finomnis@gmail.com>"]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Finomnis/zephyr-mcumgr-client"
description = "Software suite for Zephyr's MCUmgr protocol"
keywords = ["zephyr", "mcumgr", "smp"]

exclude = ["/.gitignore", "/.github/"]

[workspace.dependencies]
zephyr-mcumgr = { version = "0.0.1", path = "./zephyr-mcumgr" }
serialport = "4.8.1"
deku = "0.20.0"
thiserror = "2.0.17"
miette = "7.6.0"
rand = "0.9.2"
