[package]
name = "zephyr-mcumgr-cli"
description = "Command-line interface for Zephyr's MCUmgr protocol"
categories = ["command-line-utilities"]

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
zephyr-mcumgr.workspace = true
serialport = { workspace = true, features = ["usbportinfo-interface"] }
