[package]
name = "zephyr-mcumgr-python"
description = "Python API for Zephyr's MCUmgr protocol"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true

[lib]
name = "zephyr_mcumgr"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]
doc = false

[dependencies.pyo3]
version = "0.27.1"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py38"]

[dependencies]
zephyr-mcumgr.workspace = true
serialport.workspace = true
