[package]
name = "zephyr-mcumgr"
description = "Core library of the software suite for Zephyr's MCUmgr protocol"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
deku.workspace = true
thiserror.workspace = true
serialport.workspace = true
miette = { workspace = true }
