[package]
name = "zephyr-mcumgr"
description = "Core library of the software suite for Zephyr's MCUmgr protocol"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
thiserror.workspace = true
serialport = { workspace = true, features = ["usbportinfo-interface"] }
miette.workspace = true
rand.workspace = true
base64.workspace = true
crc.workspace = true
ringbuf.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_bytes.workspace = true
serde_repr.workspace = true
ciborium.workspace = true
log.workspace = true
strum = { workspace = true, features = ["derive"] }
chrono = { workspace = true, features = ["serde"] }
hex = { workspace = true, features = ["serde"] }
regex.workspace = true

[dev-dependencies]
proptest = "1.9.0"
